# ChatStar

./: CMakeLists.txt  README.md  db.txt
.cache/clangd/index/: api.h.099AFE5254ECC733.idx  collations.h.237027640358DB27.idx  collection_crud.h.4F0172ED738E1E12.idx  common.h.667113C0B21B94A0.idx  common.h.8A71549380B7B702.idx  common_constants.h.194225D24F24FA10.idx  crud.h.1EC85C266EF7F827.idx  crud.h.69E2CB7D7915CF34.idx  document.h.C53646E0DC4B0BD0.idx  error.h.473210CD7D0D396E.idx  error.h.F66BFBB50000802D.idx  error.h.FEA553334355CFA9.idx  executable.h.1858B64297B3A504.idx  login.h.FF531BD695ACE2C2.idx  main.cc.B23FB8609542F0E5.idx  main.cc.E749413F84369745.idx  mysql_charsets.h.B46B0394CBE31D71.idx  mysql_collations.h.00AC4C8EC884D6D9.idx  op_if.h.47A6F2C35BF352AD.idx  result.h.1786455BE21DB7FD.idx  result.h.39C9A38981E81F3C.idx  row.h.62241ECE5FDF4EB2.idx  row.h.A821DF67BB8135BA.idx  session.h.05A93B447E66B25F.idx  settings.h.58BB4DDD778782B6.idx  settings.h.D390844B4535AA70.idx  settings.h.EA66241CF738C042.idx  table_crud.h.859475C811B662A7.idx  util.h.BF01A57B1423852E.idx  value.h.1F3B31B0615D638C.idx  xdevapi.h.290DBE31C8E211D4.idx
src/client/: CMakeLists.txt  main.cc
src/server/: CMakeLists.txt  login.h  main.cc
